[metadata]
name = ppmadapter
version = 0.1dev0
summary = Audio PPM to joystick adapter
license = GPLv3
author-email = nigel.sim@gmail.com
author = Nigel Sim
home-page = https://www.github.com
requires_dist = 
    pyalsaaudio
    evdev

[files]
packages = 
    ppmadapter

[entry_points]
console_scripts = 
    ppmadapter = ppmadapter:main

